--- a/bkash_ui/pubspec.yaml
+++ b/bkash_ui/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.2.3
   carousel_slider: ^5.1.1
+  flip_card: ^0.7.0
 
 dev_dependencies:
   flutter_test:
