scanner and android permision  done

--- a/bkash_ui/pubspec.yaml
+++ b/bkash_ui/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.2.3
   carousel_slider: ^5.1.1
   flip_card: ^0.7.0
+  mobile_scanner: ^7.1.4
 
 dev_dependencies:
   flutter_test:
